--- a/Documents/presentations/Xaringan_Test_Embed.Rmd
+++ b/Documents/presentations/Xaringan_Test_Embed.Rmd
@@ -5,8 +5,8 @@ date: "April 1st, 2022"
 
 ```{r, echo = FALSE}
     xaringanExtra::embed_xaringan(
-    url = 'articles/presentations/Xaringen_Test.html',
-    ratio = "16:9",
+    url = 'https://centerforassessment.github.io/NCME_2022_Demonstration/presentations/Xaringan_Test.html',
+    ratio = "4:3",
     max_width = 800
     )
 ```
