--- a/Presentations/Xaringan_Test.Rmd
+++ b/Presentations/Xaringan_Test.Rmd
@@ -29,6 +29,12 @@ xaringanExtra::style_share_again(
 )
 ```
 
+```{r xaringan-logo, echo=FALSE}
+xaringanExtra::use_logo(
+  image_url = "https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/xaringan.png"
+)
+```
+
 ???
 
 Image credit: [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Sharingan_triple.svg)
