Adding tile view

--- a/Presentations/Xaringan_Test.Rmd
+++ b/Presentations/Xaringan_Test.Rmd
@@ -31,8 +31,12 @@ xaringanExtra::style_share_again(
 
 ```{r xaringan-logo, echo=FALSE}
 xaringanExtra::use_logo(
-  image_url = "https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/xaringan.png"
+  image_url = "https://centerforassessment.github.io/assets/favicon.png"
 )
+```
+
+```{r xaringan-tile-view, echo=FALSE}
+xaringanExtra::use_tile_view()
 ```
 
 ???
