Update of website

--- a/Presentations/Report_Generation_and_Dissemination_Using_GitHub_and_RMarkdown.Rmd
+++ b/Presentations/Report_Generation_and_Dissemination_Using_GitHub_and_RMarkdown.Rmd
@@ -17,12 +17,7 @@ output:
 class: inverse, center, middle
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, dev = "svg", warning = FALSE, message = FALSE, eval = FALSE)
 options(htmltools.dir.version = FALSE, eval = FALSE)
-```
-
-```{r broadcast, echo=FALSE}
-xaringanExtra::use_broadcast()
 ```
 
 ```{r share-again, echo=FALSE}
@@ -53,6 +48,10 @@ xaringanExtra::use_tile_view()
 
 ```{r xaringanExtra-clipboard, echo=FALSE}
 xaringanExtra::use_clipboard()
+```
+
+```{r knitr-options-set, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, dev = "svg", warning = FALSE, message = FALSE, eval = FALSE)
 ```
 
 #  Flexible Report Generation
